fix: Snyk security issues (minor), updated ktLint (#2055)